[package]
name = "mc_reverse_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
fern = "0.6.1"
http = "0.2.8"
log = { version = "0.4.17", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.151"
serde_derive = "1.0.151"
serde_yaml = "0.9.16"
tokio = { version = "1.23.0", features = ["full"] }
trust-dns-resolver = "0.22.0"
drax = { git = "https://github.com/MCEntropy/Drax", branch = "develop", features = ["full"] }
drax_derive = { git = "https://github.com/MCEntropy/Drax", branch = "develop" }
